[gd_scene load_steps=2 format=3 uid="uid://dylnbquiybg16"]

[ext_resource type="Script" path="res://Projects/Figure/Components/figure_ui_component.gd" id="1_jubnj"]

[node name="FigureUIComponent" type="Area2D"]
script = ExtResource("1_jubnj")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
